security/kyverno/verify-signature.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: check-image
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - imageReferences:
        - "harbor.fabiobartoli.com.br/*"
        attestors:
        - count: 1
          entries:
          - keys:
              secretRef:
                name: cosign-public-key
